Implémentez l'ajout des posts dans votre blog

--- a/src/app/post-item/post-item.component.html
+++ b/src/app/post-item/post-item.component.html
@@ -6,5 +6,8 @@
     <div>
         <button class="btn btn-success" (click)="onLove()">Love it!</button> &nbsp;
         <button class="btn btn-danger" (click)="onDeLove()">Don't love it!</button>
+
+        <div class="pull-right"><button class="btn btn-danger" (click)="onDeletePost()">Supprimer Post</button>
+        </div>
     </div>
 </li>
