--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -1,5 +1,6 @@
-<app-post-item *ngFor="let post of entries"
+<app-post-item *ngFor="let post of posts; let i = index"
                [blogTitle]="post.title"
                [blogContent]="post.content"
->
+               [blogLoveits]="post.LoveIts"
+               [index]="i">
 </app-post-item>
